--- a/build.gradle
+++ b/build.gradle
@@ -28,22 +28,14 @@ wrapper {
 	gradleVersion = '4.7'
 }
 
-// note that a production build creates javadoc, sources jars and signatures undesired during development
-// for performance reasons
-def isProductionBuild = System.env.NEXUS_DEPLOY_USER != null
-ext {
-	timestampedVersion = isProductionBuild
-}
-
 apply plugin: 'org.ajoberstar.grgit'
 
-if (ext.timestampedVersion) {
-	def gitCommitTimestamp = grgit.head().date.format("yyyyMMddHHmmss", TimeZone.getTimeZone('GMT'))
-	version =  BUILD_VERSION_PREFIX + "." + gitCommitTimestamp
-} else {
-	version = '0.0.0-SNAPSHOT'
-}
+version = BUILD_VERSION_PREFIX + "-cropster-" + FORK_VERSION
 group = GROUP_ID
+
+// note that a production build creates javadoc, sources jars and signatures undesired during development
+// for performance reasons
+def isProductionBuild = !project.version.endsWith('SNAPSHOT')
 
 if (JavaVersion.current().isJava8Compatible()) {
 	allprojects {
