--- a/crnk-client-angular-ngrx/build.gradle
+++ b/crnk-client-angular-ngrx/build.gradle
@@ -39,7 +39,7 @@ task generateMetaStubs {
 	})
 }
 
-def isProductionBuild = System.env.NEXUS_DEPLOY_USER != null
+def isProductionBuild = !project.version.endsWith('SNAPSHOT')
 if (isProductionBuild) {
 	ext {
 		NG_BUILD_ARGS = ['--environment', 'prod', '--target', 'production']
