--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ NEXUS_DEPLOY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
 # NEXUS_DEPLOY_URL=https://api.bintray.com/crnk-project/crnk-public/crnk-framework;publish=1
 
 BUILD_VERSION_PREFIX=2.8
+FORK_VERSION=1-SNAPSHOT
 
 # https://docs.gradle.org/current/userguide/signing_plugin.html
 signing.keyId=33A45241
