Upgrade gradle-node-plugin to 1.4.0
Although the groupId changed it is still the same plugin and the
packages have still the same names.

--- a/crnk-ui/build.gradle
+++ b/crnk-ui/build.gradle
@@ -1,6 +1,6 @@
 import com.moowork.gradle.node.npm.NpmTask
 
-apply plugin: 'com.moowork.node'
+apply plugin: 'com.github.node-gradle.node'
 
 apply plugin:'java'
 
