--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 		classpath "io.spring.gradle:dependency-management-plugin:${depMgmtVersion}"
 		classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.7'
 		classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16'
-		classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
+		classpath 'com.github.node-gradle:gradle-node-plugin:1.4.0'
 		classpath 'org.ajoberstar:gradle-git-publish:0.4.1'
 		classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5-rc1'
 		classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
